<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main"
        android:icon="@drawable/main"
        android:title="@string/section_main"
        app:showAsAction="always" />
    <item
        android:id="@+id/categories"
        android:icon="@drawable/categories"
        android:title="@string/section_categories"
        app:showAsAction="always" />
    <item
        android:id="@+id/basket"
        android:icon="@drawable/shopping_basket"
        android:title="@string/section_basket"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/section_profile"
        app:showAsAction="always" />
</menu>